--- a/index.html
+++ b/index.html
@@ -102,27 +102,28 @@
     <div class="skill">UI/UX</div>
   </div>
 </section><section class="projects">
-  <h2>My Projects</h2>
+  <h2>Mening loyihalarim</h2>
   <div class="projects">
     <div class="project-card">
-      <h3>Project 1</h3>
-      <p>Mobilografik loyiha namoyishi. Hover qilganda batafsil ma’lumot ko‘rinadi.</p>
+      <h3>MFC XORAZM</h3>
+      <p>obilografiya sohasidagi qilgan ishlarim</p>
     </div>
     <div class="project-card">
-      <h3>Project 2</h3>
-      <p>Video montaj va dizayn ishlari.</p>
+      <h3>Joma Coach</h3>
+      <p>Video montaj, SMM, Mobilografiya sohasidagi qobilyatlarim yigʻilgan maskan</p>
     </div>
     <div class="project-card">
-      <h3>Project 3</h3>
-      <p>UI/UX va mobil interaktiv loyihalar.</p>
+      <h3>AREVO SPORT</h3>
+      <p>Grafik Dizayn, Dasturchilik, UI/UX va mobil interaktiv loyihalarim toʻplangan loyiham.</p>
     </div>
   </div>
 </section><section class="contact">
-  <h2>Contact Me</h2>
+  <h2>Men bilan bogʻlanish</h2>
   <a href="tel:+998952473537">Phone: +998 95 247 35 37</a>
   <a href="https://www.instagram.com/akhmdvv21?igsh=MXNhNjloeGNmb2Z3eQ==" target="_blank">Instagram: @akhmdvv21</a>
   <a href="https://t.me/ua_social" target="_blank">Telegram: @ua_social</a>
 </section><footer>
-  &copy; 2025 Umrbek Ahmedov. All rights reserved.
+  2025 Umrbek Ahmedov. All rights reserved.
 </footer></body>
+
 </html>
