--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="projects">
     <div class="project-card">
       <h3>MFC XORAZM</h3>
-      <p>obilografiya sohasidagi qilgan ishlarim</p>
+      <p>Mobilografiya sohasidagi qilgan ishlarim</p>
     </div>
     <div class="project-card">
       <h3>Joma Coach</h3>
@@ -114,7 +114,7 @@
     </div>
     <div class="project-card">
       <h3>AREVO SPORT</h3>
-      <p>Grafik Dizayn, Dasturchilik, UI/UX va mobil interaktiv loyihalarim toʻplangan loyiham.</p>
+      <p>Grafik Dizayn, Dasturchilik, UI/UX va mobil interaktiv ishlarim toʻplangan loyiham.</p>
     </div>
   </div>
 </section><section class="contact">
@@ -127,3 +127,4 @@
 </footer></body>
 
 </html>
+
